tests/test55.rael.exp
Error [tests/test55.rael:1:10]: Expected expression
| log 123, log
|          ^
